# evolving-societies

./: README.md  index.html
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  run.sh
backend/app/: config.py  main.py
backend/app/api/: websocket.py
backend/app/api/routes/: entities.py  simulation.py  statistics.py  world.py
backend/app/core/: decision_engine.py  neural_network.py
backend/app/models/: entity.py  requests.py  society.py  world.py
backend/app/services/: brain_service.py  entity_service.py  statistics_services.py  world_service.py  world_services.py
backend/app/utils/: connection_manager.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: communication.js  entities.js  main.js
