[project]
name = "evolving-societies"
version = "0.1.0"
description = "Neural network-based artificial life simulation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.1",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
    "torch>=2.9.0",
    "numpy>=2.3.4",
    "pydantic==2.12.3",
    "pydantic-settings>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["app"]
